<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_addtask"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Task"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="150dp"
            />

        <TextView
            android:id="@+id/addtask_close"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:layout_gravity="end"
            android:background="@drawable/background_btn2"
            android:gravity="end"
            android:onClick="close"
            android:text="Cancel"

            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/addtask_taskname"
            android:hint="Task Name"
            android:inputType="text"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/addtask_description"
            android:hint="Description"
            android:inputType="text"
            android:maxLines="3"
            android:minLines="3"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Select Color"
            android:layout_marginLeft="3dp"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        </LinearLayout>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/button"
            android:id="@+id/addtask_color_group"

            android:orientation="horizontal">


            <RadioButton

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@null"
                android:layout_marginLeft="3dp"
                android:background="@drawable/button_red"
                android:tag="red"
                android:id="@+id/addtask_red"
                android:checked="false" />

            <RadioButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@null"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_blue"
                android:id="@+id/addtask_blue"
                android:tag="blue"
                android:checked="false" />

            <RadioButton

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@null"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_purple"
                android:id="@+id/addtask_purple"
                android:tag="purple"
                android:checked="false" />
            <RadioButton

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@null"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_yellow"
                android:id="@+id/addtask_yellow"
                android:tag="yellow"
                android:checked="false" />
            <RadioButton

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@null"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_green"
                android:id="@+id/addtask_green"
                android:tag="green"
                android:checked="false" />


        </RadioGroup>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:id="@+id/addtask_date"
        android:text="Choose Date"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:onClick="ShowDate"
            android:id="@+id/addtask_time"
            android:text="Choose Time"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="Choose Frequency"
            />
        <Spinner

            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:prompt="@string/frequency_prompt"
            android:entries="@array/frequency"
            android:id="@+id/addtask_frequency"
                 
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/addtask_finishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:onClick="AddTask"
            android:text="Done"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_primary"
            android:id="@+id/addtask_errormsg"/>




    </LinearLayout>




    </LinearLayout>

