<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_calendar"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backGroundColor">
    <LinearLayout
        android:layout_width="wrap_content"
...
            android:onClick="AddTask"
            app:backgroundTint="?attr/addTaskButtonColor"
            app:srcCompat="@drawable/ic_baseline_add_24px" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="160sp"
            android:id="@+id/calendar_tasks">
        </ScrollView>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
